--- a/Magazine E-commerce/index.html
+++ b/Magazine E-commerce/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>E-Commerce Genérico</title>
 </head>
 
 <body>
-  
+
+  <header></header>
+
+  <main>
+    <section id="container-produto">
+      <div id="card-produto-1">
+        <img src="" alt="">
+      </div>
+    </section>
+  </main>
+
 </body>
 
 </html>
