adição de tailwind e replace dos arquivos

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 
   <main>
     <section id="container-produto">
-      <div id="card-produto-1">
-        <img src="" alt="">
-      </div>
+      
     </section>
   </main>
 
+  <script src="main.js"></script>
 </body>
 
 </html>
