adição de tailwind css e estilização

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 
 <body>
 
-  <header></header>
+  <header class="flex bg-blue-950 justify-between">
+
+    <img class="h-20 p-2" src="img/logo-magazine.jpg" alt="logo">
+
+    <div class="text-white flex gap-2 items-end">
+    <button>Histórico</button>
+    <button>Carrinho</button>
+    </div>
+  </header>
 
   <main>
-    <section id="container-produto">
+    <section class="flex flex-wrap" id="container-produto">
       
     </section>
   </main>
