--- a/index.html
+++ b/index.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>E-Commerce</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>E-Commerce Genérico</title>
-</head>
+  <body class="bg-stone-200 flex flex-col">
+    <section
+      id="carrinho"
+      class="bg-black fixed top-0 right-[-360px] h-screen w-[360px] text-white z-50 duration-200 border-l border-slate-200 p-5 flex flex-col justify-between"
+    >
+      <div id="cabecalho-carrinho" class="flex justify-between m-4">
+        <p>Meu carrinho</p>
+        <button id="fechar-carrinho">
+          <i class="fa-regular fa-circle-xmark"></i>
+        </button>
+      </div>
 
-<body>
+      <section id="produtos-carrinho">
 
-  <header class="flex bg-blue-950 justify-between">
+      </section>
 
-    <img class="h-20 p-2" src="img/logo-magazine.jpg" alt="logo">
-
-    <div class="text-white flex gap-2 items-end">
-    <button>Histórico</button>
-    <button>Carrinho</button>
-    </div>
-  </header>
-
-  <main>
-    <section class="flex flex-wrap" id="container-produto">
-      
+      <p id="preco-total">200</p>
+      <button class="bg-slate-200 text-black p-1">Finalizar compra</button>
     </section>
-  </main>
 
-  <script src="main.js"></script>
-</body>
+    <header
+      class="flex bg-black justify-between px-8 py-4 sticky top-0 shadow-xl shadow-slate-400 text-xl z-10"
+    >
+      <img class="h-20 p-2" src="img/logo-magazine.jpg" alt="logo" />
 
+      <div class="text-white flex gap-2 items-end mx-2">
+        <button class="mx-2"><i class="fa-solid fa-user"></i></button>
+        <button id="abrir-carrinho" class="mr-2">
+          <i class="fa-solid fa-cart-shopping"></i>
+        </button>
+      </div>
+    </header>
+
+    <main>
+      <section
+        class="flex flex-wrap p-10 justify-center gap-10"
+        id="container-produto"
+      ></section>
+    </main>
+
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
