adição de funcionalidades ao carrinho, com bugs não resolvidos para funcionamento

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </button>
       </div>
 
-      <section id="produtos-carrinho">
+      <section id="produtos-carrinho" class="h-3/5 overflow-y-auto flex flex-col gap-2">
 
       </section>
 
@@ -57,3 +57,5 @@
     <script type="module" src="main.js"></script>
   </body>
 </html>
+
+
