adição da funcionalidade de calculo total da compra

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       </section>
 
-      <p id="preco-total">200</p>
+      <p id="preco-total" class="bg-slate-200 text-green-800 roundes-sm pl-5 ">Total: </p>
       <button class="bg-slate-200 text-black p-1">Finalizar compra</button>
     </section>
 
