--- a/checkout.html
+++ b/checkout.html
@@ -14,7 +14,7 @@
     <title>E-Commerce</title>
   </head>
 
-  <body class="bg-stone-200 flex flex-col">
+  <body class="bg-stone-200 flex flex-col h-screen">
 
     <header
       class="flex bg-black justify-between px-8 py-4 sticky top-0 shadow-xl shadow-slate-400 text-xl z-10"
@@ -22,8 +22,26 @@
       <img class="h-12 p-2" src="img/logo-magazine.jpg" alt="logo" />
     </header>
 
-    <form class="flex w-100 px-5 gap-4">
-        <section id="dados-usuario" class="w-1/3"></section>
+    <form class="flex w-100 px-5 gap-4 py-10 grow">
+        <section id="dados-usuario" class="w-1/3 bg-white rounded-lg">
+          <p class="mb-5 text-center font-bold p-5">Seus dados</p>
+
+          <div class="flex flex-col px-10 py-3">
+            <label for="nome" class="font-bold text-sm mb-2">Nome</label>
+            <input type="text" id="nome" class="rounded-sm px-2 border-2 border-slate-200 py-1" placeholder="Lorran Guarino" required>
+          </div>
+
+          <div class="flex flex-col px-10 py-3">
+            <label for="email" class="font-bold text-sm mb-2">Email</label>
+            <input type="email" id="email" class="rounded-sm px-2 border-2 border-slate-200 py-1" placeholder="lorranguarino153@gmail.com" required>
+          </div>
+
+          <div class="flex flex-col px-10 py-3">
+            <label for="telefone" class="font-bold text-sm mb-2">Telefone</label>
+            <input type="tel" id="telefone" class="rounded-sm px-2 border-2 border-slate-200 py-1" placeholder="11 98928-2450" required>
+          </div>
+        </section>
+
         <section id="dados-pagamento" class="w-1/3"></section>
         <section id="produtos-checkout" class="w-1/3"></section>
     </form>
